Update Docker Hub username in build workflow

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,5 +29,5 @@ jobs:
           context: ./
           push: true
           tags: |
-            thisalkarunarathna/nextchat-chatapp-backend:${{ env.SHORT_SHA }}
-            thisalkarunarathna/nextchat-chatapp-backend:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/nextchat-chatapp-backend:${{ env.SHORT_SHA }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/nextchat-chatapp-backend:latest
